# Shuttle

./: Build.ps1  CMakeLists.txt  app.rc.in  resource.h  resources.qrc
Asset/: Thumbs.db  install.sh
src/: main.cpp
src/core/: CryptoUtils.cpp  LockManager.cpp  SSHSession.cpp  SSHSession.h  SSHSessionManager.h
src/sftp/: SftpModel.cpp  SftpModel.h  SftpSession.cpp  SftpSession.h  SftpWidget.cpp  SftpWidget.h
src/ssh/: AuthMethod.h  ProfileStore.cpp  ProfileStore.h  SSHSession.cpp  SSHSession.h  SSHSessionManager.cpp  SSHSessionManager.h  SessionProfile.cpp  SessionProfile.h
src/terminal/: AnsiParser.cpp  AnsiParser.h  TerminalBuffer.cpp  TerminalBuffer.h  TerminalCell.h  TerminalWidget.cpp  TerminalWidget.h
src/ui/: NewSessionDialog.cpp  NewSessionDialog.h  ProfileListWidget.cpp  ProfileListWidget.h  ShuttleWindow.cpp  ShuttleWindow.h  TrayManager.cpp  TrayManager.h
src/ui/monitor/: MonitorBar.cpp  MonitorBar.h  MonitorData.h  MonitorSession.cpp  MonitorSession.h
src/ui/tab/: HomeTab.cpp  HomeTab.h
